# tpn-worker-dashboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: build-release.yml
src/: config.rs  dashboard.html  error.rs  main.rs  models.rs
src/api/: batch.rs  dashboard.rs  mod.rs  upgrade.rs  workers.rs
src/db/: init.rs  mod.rs  pool.rs  port_health.rs  snapshots.rs  workers.rs
src/poller/: mod.rs  port_health.rs
